dnl Process this file with autoconf to produce a configure script

AC_INIT(main.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(testtool,0.0.0)

AM_MAINTAINER_MODE

AC_DEFINE([_GNU_SOURCE],[1],[To make glibc specific extensions visible])

AC_PROG_CC
AC_PROG_INSTALL
AC_SYS_LARGEFILE

AC_OUTPUT([Makefile])
