dnl Process this file with autoconf to produce a configure script

AC_INIT(testtool,0.0.0,brlink@debian.org)
AC_CONFIG_SRCDIR(main.c)
AC_CONFIG_AUX_DIR(ac)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([-Wall])

AM_MAINTAINER_MODE
AC_GNU_SOURCE

AC_PROG_CC
AC_PROG_INSTALL
AC_SYS_LARGEFILE

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
